--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "color-trading-be",
+  "name": "color-trading-backend",
   "version": "1.0.0",
-  "description": "Backend for Color Trading Betting Application",
-  "main": "src/index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest"
+    "start": "node api/index.js"
   },
+  "author": "santosh",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@ctrl/tinycolor": "^4.1.0",
+    "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.0",
-    "node-cron": "^3.0.2"
+    "dotenv": "^17.2.3",
+    "express": "^4.18.3",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
+    "nodemailer": "^7.0.6",
+    "twilio": "^5.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2"
-  },
-  "keywords": ["betting", "color", "trading", "api"],
-  "author": "",
-  "license": "MIT"
+    "nodemon": "^3.1.10"
+  }
 }
