--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express-oauth2-jwt-bearer": "^1.6.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.2.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "twilio": "^5.7.0"
   },
