--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,11 @@
             "destination": "/api"
         }
     ],
-    "buildCommand": ""
+    "buildCommand": "",
+    "crons": [
+        {
+            "path": "/api/cron",
+            "schedule": "* * * * *"
+        }
+    ]
 }
