--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.2.0",
     "node-cron": "^4.2.1",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^7.0.6",
     "twilio": "^5.7.0"
   },
